<resources>
    <string name="app_name">MyGameProjekt</string>
    <string name="title">My Game</string>
    <string name="start_game">Start Game</string>
    <string name="highscores">Highscores</string>
    <string name="settings">Settings</string>
    <string name="about_my_game">About My Game</string>
    <string name="coming_soon">Coming soon …</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm\npassword:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="change_username">Change username</string>
</resources>