<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="?colorPrimary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTitleContent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="?colorSecondary"
        android:backgroundTint="?colorPrimary"
        android:background="@drawable/round_corners"
        android:textAllCaps="false"
        android:paddingHorizontal="@dimen/paddingHorizontalButton"
        android:paddingVertical="@dimen/paddingVerticalButton"
        android:drawablePadding="@dimen/drawablePaddingButton"
        android:drawableStart="@drawable/stars"
        android:text="@string/start_game"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/guidelineTitleContent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/highscoresButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="?colorSecondary"
        android:backgroundTint="?colorPrimary"
        android:background="@drawable/round_corners"
        android:textAllCaps="false"
        android:paddingHorizontal="@dimen/paddingHorizontalButton"
        android:paddingVertical="@dimen/paddingVerticalButton"
        android:drawablePadding="@dimen/drawablePaddingButton"
        android:drawableStart="@drawable/stars"
        android:text="@string/highscores"
        android:layout_marginTop="@dimen/marginBetweenElements"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/startGameButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="?colorSecondary"
        android:backgroundTint="?colorPrimary"
        android:background="@drawable/round_corners"
        android:textAllCaps="false"
        android:paddingHorizontal="@dimen/paddingHorizontalButton"
        android:paddingVertical="@dimen/paddingVerticalButton"
        android:drawablePadding="@dimen/drawablePaddingButton"
        android:drawableStart="@drawable/stars"
        android:text="@string/settings"
        android:layout_marginTop="@dimen/marginBetweenElements"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/highscoresButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/aboutGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="?colorSecondary"
        android:backgroundTint="?colorPrimary"
        android:background="@drawable/round_corners"
        android:textAllCaps="false"
        android:paddingHorizontal="@dimen/paddingHorizontalButton"
        android:paddingVertical="@dimen/paddingVerticalButton"
        android:drawablePadding="@dimen/drawablePaddingButton"
        android:drawableStart="@drawable/stars"
        android:text="@string/about_my_game"
        android:layout_marginTop="@dimen/marginBetweenElements"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/settingsButton"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitleContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>