<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/textSizeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTitleContent"/>

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="@dimen/textSizeButtons"
        android:labelFor="@id/usernameInput"
        android:layout_marginTop="@dimen/marginBetweenElements"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineTitleContent" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Your username"
        android:inputType="textPersonName"
        android:textSize="@dimen/textSizeButtons"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLabelInput"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/usernameLabel"
        app:layout_constraintBottom_toBottomOf="@id/usernameLabel"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeButtons"
        android:textColor="?colorSecondary"
        android:backgroundTint="?colorPrimary"
        android:background="@drawable/round_corners"
        android:textAllCaps="false"
        android:paddingHorizontal="@dimen/paddingHorizontalButton"
        android:paddingVertical="@dimen/paddingVerticalButton"
        android:drawablePadding="@dimen/drawablePaddingButton"
        android:drawableStart="@drawable/stars"
        android:text="@string/change_username"
        android:layout_marginEnd="@dimen/marginBetweenElementsHalved"
        android:layout_marginTop="@dimen/marginBetweenElements"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/usernameLabel"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lightModeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeButtons"
        android:textColor="?colorSecondary"
        android:backgroundTint="?colorPrimary"
        android:background="@drawable/round_corners"
        android:textAllCaps="false"
        android:paddingHorizontal="@dimen/paddingHorizontalButton"
        android:paddingVertical="@dimen/paddingVerticalButton"
        android:drawablePadding="@dimen/drawablePaddingButton"
        android:drawableStart="@drawable/stars"
        android:text="@string/light"
        android:layout_marginEnd="@dimen/marginBetweenElementsHalved"
        android:layout_marginTop="@dimen/marginBetweenElements"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/darkModeButton"
        app:layout_constraintTop_toBottomOf="@id/submitButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/darkModeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeButtons"
        android:textColor="?colorSecondary"
        android:backgroundTint="?colorPrimary"
        android:background="@drawable/round_corners"
        android:textAllCaps="false"
        android:paddingHorizontal="@dimen/paddingHorizontalButton"
        android:paddingVertical="@dimen/paddingVerticalButton"
        android:drawablePadding="@dimen/drawablePaddingButton"
        android:drawableStart="@drawable/stars"
        android:text="@string/dark"
        android:layout_marginStart="@dimen/marginBetweenElementsHalved"
        android:layout_marginTop="@dimen/marginBetweenElements"
        app:layout_constraintStart_toEndOf="@id/lightModeButton"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/submitButton"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitleContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLabelInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>